[package]
name = "zz-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
sha1 = "0.10.6"
base64 = "0.22.1"
zz-account = "0.1.5"
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
async-trait = "0.1.89"
tokio-util = "0.7.17"
