[package]
name = "zz-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
sha1 = "0.10.6"
base64 = "0.22.1"
zz-account = "0.1.6"
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
async-trait = "0.1.89"
tokio-util = "0.7.17"

ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
rand = "=0.8.5"
sha2 = "=0.10.8"
dirs-next = "2.0.0"
bitcoin = "0.32.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2.10.0", features = ["serde"] }


[dev-dependencies]
tempfile = "3.23.0"
