[package]
name = "zz-p2p"
version = "0.1.5"
edition = "2024"
description = "A Rust library for managing cryptocurrency p2p network."
license = "GPL-3.0-or-later"
repository = "https://github.com/Free-Web-Movement/zz-rust-mod-p2p"
keywords = ["node", "p2p", "nat", "protocol"]
authors = ["Eric <calidion@gmail.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
sha1 = "0.10.6"
base64 = "0.22.1"
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
async-trait = "0.1.89"
tokio-util = "0.7.17"

ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
rand = "0.8.5"
dirs-next = "2.0.0"
bitcoin = "0.32.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2.10.0", features = ["serde"] }
if-addrs = "0.14.0"
tracing = "0.1.44"
chacha20poly1305 = "0.10.1"
x25519-dalek = "2.0.1"
hkdf = "0.12.4"
uuid = "1.19.0"
sha2 = "0.10.9"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "ansi", "env-filter"] }
lazy_static = "1.5.0"

zz-account = { path = "../zz-rust-mod-account" }


[dev-dependencies]
tempfile = "3.23.0"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "zzp2p"
path = "src/main.rs"
